--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
+    "http-server": "^0.11.1",
     "marked": "^0.7.0"
   },
   "scripts": {
-    "build": "node --experimental-modules ./render.mjs"
+    "copy": "cp -R site/ target/",
+    "build": "node --experimental-modules ./render.mjs",
+    "serve": "node_modules/.bin/http-server target/",
+    "start": "yarn copy && yarn build && yarn serve"
   }
 }
