--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "type": "module",
   "dependencies": {
     "http-server": "^0.11.1",
-    "marked": "^0.7.0"
+    "marked": "^0.7.0",
+    "react": "^16.9.0"
   },
   "scripts": {
     "copy": "cp -R site/ target/",
