Add command to publish target folder on gh-pages

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "copy": "cp -R site/ target/",
     "build": "node --experimental-modules ./render.mjs",
     "serve": "node_modules/.bin/http-server target/",
-    "start": "yarn copy && yarn build && yarn serve"
+    "start": "yarn copy && yarn build && yarn serve",
+    "gh-pages": "git subtree push --prefix target origin gh-pages"
   }
 }
