--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "build": "node --experimental-modules ./render.mjs",
     "serve": "node_modules/.bin/http-server target/",
     "start": "yarn copy && yarn build && yarn serve",
-    "gh-pages": "git subtree push --prefix dist origin gh-pages"
+    "deploy": "git subtree push --prefix dist origin gh-pages"
   }
 }
