--- a/package.json
+++ b/package.json
@@ -6,15 +6,25 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "webpack-cli": "^3.3.8"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
     "http-server": "^0.11.1",
     "marked": "^0.7.0",
-    "react": "^16.9.0"
+    "webpack": "^4.39.3"
   },
   "scripts": {
-    "copy": "cp -R site/ dist/",
+    "copy": "cp -R public/ dist/",
     "build": "node --experimental-modules ./render.mjs",
-    "serve": "node_modules/.bin/http-server target/",
-    "start": "yarn copy && yarn build && yarn serve",
+    "serve": "node_modules/.bin/http-server dist/",
+    "webpack": "node_modules/.bin/webpack",
+    "start": "yarn copy && yarn build && yarn webpack && yarn serve",
     "deploy": "git subtree push --prefix dist origin gh-pages"
   }
 }
