--- a/package.json
+++ b/package.json
@@ -7,25 +7,30 @@
   "type": "module",
   "dependencies": {
     "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "webpack-cli": "^3.3.8"
+    "react-dom": "^16.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "cross-env": "^5.2.1",
     "http-server": "^0.11.1",
     "marked": "^0.7.0",
-    "webpack": "^4.39.3"
+    "npm-run-all": "^4.1.5",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.8"
   },
   "scripts": {
     "clean": "rm -rf dist/",
     "copy": "cp -R public/ dist/ && cp -R posts/images dist/images",
-    "build": "node --experimental-modules ./render.mjs",
+    "build:markdown": "node --experimental-modules ./render.mjs",
+    "build:application": "node_modules/.bin/webpack",
+    "build": "run-s clean copy build:*",
     "serve": "node_modules/.bin/http-server dist/",
-    "webpack": "node_modules/.bin/webpack",
-    "start": "yarn clean && yarn copy && yarn build && yarn webpack && yarn serve",
-    "deploy": "git subtree push --prefix dist origin gh-pages"
+    "start": "run-s build serve",
+    "commit": "git add . && git commit -m \"Updated build\"",
+    "push": "git subtree push --prefix dist origin gh-pages",
+    "deploy": "run-s build commit push"
   }
 }
